@@ -1,4 +1,5 @@
-# Copyright 2004-2013 Free Software Foundation, Inc.
+# Copyright 2004, 2005, 2007, 2008, 2009, 2010, 2011
+# Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -21,13 +22,15 @@ if {![dwarf2_support]} {
     return 0
 }
 
-standard_testfile .S
+set testfile "dw2-filename"
+set srcfile ${testfile}.S
+set binfile ${objdir}/${subdir}/${testfile}.x
 
 if  { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" object {nodebug}] != "" } {
     return -1
 }
 
-clean_restart ${testfile}
+clean_restart ${testfile}.x
 
 # Verify that -file-list-exec-source-files returns a list where
 # the "file" is "file1.txt" (file base name), and "fullname" is
