@@ -1,3 +1,8 @@
+2011-06-10  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* symtab.c (output_partial_symbol_filename): Exchange the filename and
+	fullname parameters order.
+
 2011-06-03  Tom Tromey  <tromey@redhat.com>
 
 	* python/py-inferior.c (python_inferior_exit): Use inferior's exit
